--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,12 @@ spring.h2.console.path=/h2-console
 
 # JPA ??
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Hibernate? ???? ???? ???? ??? ?? (schema.sql? ???? ??)
+spring.jpa.hibernate.ddl-auto=none
+
+# SQL ?? ?? ?? ??
+spring.datasource.initialization-mode=always
